--- a/appinfo.json
+++ b/appinfo.json
@@ -1,33 +1,11 @@
 {
     "appKeys": {},
-    "capabilities": [
-        ""
-    ],
+    "capabilities": [],
     "companyName": "Sebastian Rahlf",
     "longName": "BMW Pendelbus",
     "projectType": "pebblejs",
     "resources": {
         "media": [
-            {
-                "file": "images/menu_icon.png",
-                "name": "IMAGE_MENU_ICON",
-                "type": "bitmap"
-            },
-            {
-                "file": "images/logo_splash.png",
-                "name": "IMAGE_LOGO_SPLASH",
-                "type": "bitmap"
-            },
-            {
-                "file": "images/tile_splash.png",
-                "name": "IMAGE_TILE_SPLASH",
-                "type": "bitmap"
-            },
-            {
-                "file": "fonts/UbuntuMono-Regular.ttf",
-                "name": "MONO_FONT_14",
-                "type": "font"
-            },
             {
                 "file": "images/logo.png",
                 "menuIcon": true,
